# basic-rustos-grub

./: Makefile  README.md
rust/: Cargo.toml  x86_64-unknown-rustos-gnu.json
rust/src/: lib.rs
src/: boot.asm  multiboot_header.asm
